# vibe-mapping

./: .pre-commit-config.yaml  Makefile  README.md  osmconvert_tempfile.72791.3  osmconvert_tempfile.72791.5  pyproject.toml  requirements.txt
osm/: .gitignore  circle.poly  times-city.poly
scripts/: build-area-cells.py  build-area-points-kml.py  build-area-vibe-kml.py  build-area-vibe.py  get-circle.py  get-points.py  normalize-area-points.py
tests/: test_build_area_cells.py  test_build_area_points_kml.py  test_build_area_vibe.py  test_build_area_vibe_kml.py  test_get_points.py  test_normalize_area_points.py
